--- a/PDP/PDP/PDP.csproj
+++ b/PDP/PDP/PDP.csproj
@@ -183,6 +183,7 @@
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Consultations.cs" />
     <Compile Include="Models\Doctors.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
