update on spec test + code cov

--- a/PDP/PDP.Tests/PDP.Tests.csproj
+++ b/PDP/PDP.Tests/PDP.Tests.csproj
@@ -111,7 +111,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controllers\Specialization.cs" />
+    <Compile Include="Controllers\SpecializationsControllerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
   </ItemGroup>
