--- a/PDP/PDP.Tests/PDP.Tests.csproj
+++ b/PDP/PDP.Tests/PDP.Tests.csproj
@@ -111,6 +111,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\DoctorsControllerTest.cs" />
     <Compile Include="Controllers\SpecializationsControllerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
