--- a/PDP/PDP.Tests/PDP.Tests.csproj
+++ b/PDP/PDP.Tests/PDP.Tests.csproj
@@ -113,6 +113,9 @@
   <ItemGroup>
     <Compile Include="Controllers\DoctorsControllerTest.cs" />
     <Compile Include="Controllers\SpecializationsControllerTest.cs" />
+    <Compile Include="Controllers\ConsultationControllerTest.cs" />
+    <Compile Include="Controllers\ManageControllerTest.cs" />
+    <Compile Include="Controllers\AccountControllerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
   </ItemGroup>
