--- a/PDP/PDP.Tests/PDP.Tests.csproj
+++ b/PDP/PDP.Tests/PDP.Tests.csproj
@@ -111,6 +111,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\ConsultationControllerTest.cs" />
     <Compile Include="Controllers\DoctorControllerTest.cs" />
     <Compile Include="Controllers\SpecializationControllerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
